--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <script src="./q1.js"></script>
   <script src="./q2.js"></script>
   <script src="./q3.js"></script>
+  <script src="./q4.js"></script>
   <script src="./main.js"></script>
 </body>
